--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "TikTokJam 2025",
+  "name": "tiktokjam-frontend",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "rspeedy build",
-    "dev": "rspeedy dev",
-    "preview": "rspeedy preview",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
     "test": "vitest run"
   },
   "dependencies": {
-    "@lynx-js/react": "^0.112.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@lynx-js/preact-devtools": "^5.0.1-6664329",
-    "@lynx-js/qrcode-rsbuild-plugin": "^0.4.1",
-    "@lynx-js/react-rsbuild-plugin": "^0.10.13",
-    "@lynx-js/rspeedy": "^0.10.8",
-    "@lynx-js/types": "3.3.0",
-    "@rsbuild/plugin-type-check": "1.2.4",
-    "@testing-library/jest-dom": "^6.8.0",
     "@types/react": "^18.3.23",
-    "jsdom": "^26.1.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^5.0.2",
     "typescript": "~5.9.2",
+    "vite": "^5.4.0",
     "vitest": "^3.2.4"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
