completed value sharing platform for content creators

--- a/backend/tier-tok/pom.xml
+++ b/backend/tier-tok/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-docker-compose</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
