--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,13 +1,82 @@
-numpy
-pandas
-scikit-learn
-qdrant-client
-boto3 
-twelvelabs
-pytube
-flask
-flask-cors
-python-dotenv
-ipython
-flask
-scikit-learn
+annotated-types==0.7.0
+anyio==4.10.0
+asttokens==3.0.0
+blinker==1.9.0
+boto3==1.40.19
+botocore==1.40.19
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+debugpy==1.8.16
+decorator==5.2.1
+executing==2.2.0
+Flask==3.1.2
+flask-cors==6.0.1
+fonttools==4.59.2
+grpcio==1.74.0
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+ipykernel==6.30.1
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jmespath==1.0.1
+joblib==1.5.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.9
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.2
+parso==0.8.5
+pillow==11.3.0
+platformdirs==4.4.0
+portalocker==3.2.0
+prompt_toolkit==3.0.52
+protobuf==6.32.0
+psutil==7.0.0
+pure_eval==0.2.3
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytube==15.0.0
+pytz==2025.2
+pywin32==311
+pyzmq==27.0.2
+qdrant-client==1.15.1
+requests==2.32.5
+s3transfer==0.13.1
+scikit-learn==1.7.1
+scipy==1.16.1
+seaborn==0.13.2
+six==1.17.0
+sniffio==1.3.1
+stack-data==0.6.3
+threadpoolctl==3.6.0
+tornado==6.5.2
+traitlets==5.14.3
+twelvelabs==1.0.1
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
