--- a/backend/tier-tok/src/main/resources/application.properties
+++ b/backend/tier-tok/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=tier-tok
 spring.docker.compose.enabled=true
+ai.server.base.url=http://localhost:5000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/tierTok-db
 spring.datasource.username=postgres
