--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,30 +1,49 @@
 annotated-types==0.7.0
 anyio==4.10.0
 asttokens==3.0.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.5
 blinker==1.9.0
+boto==2.49.0
 boto3==1.40.19
 botocore==1.40.19
+cachetools==5.5.2
 certifi==2025.8.3
+cffi==1.17.1
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.3
+cryptography==45.0.6
 cycler==0.12.1
 debugpy==1.8.16
 decorator==5.2.1
+Deprecated==1.2.18
 executing==2.2.0
+fabric==3.2.2
 Flask==3.1.2
 flask-cors==6.0.1
 fonttools==4.59.2
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.179.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-genai==1.32.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
 grpcio==1.74.0
+grpcio-status==1.71.2
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
 httpcore==1.0.9
+httplib2==0.30.0
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+invoke==2.2.0
 ipykernel==6.30.1
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
@@ -43,17 +62,24 @@ nest-asyncio==1.6.0
 numpy==2.3.2
 packaging==25.0
 pandas==2.3.2
+paramiko==4.0.0
 parso==0.8.5
 pillow==11.3.0
 platformdirs==4.4.0
 portalocker==3.2.0
+prettytable==3.16.0
 prompt_toolkit==3.0.52
-protobuf==6.32.0
+proto-plus==1.26.1
+protobuf==5.29.5
 psutil==7.0.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyNaCl==1.5.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -63,20 +89,27 @@ pywin32==311
 pyzmq==27.0.2
 qdrant-client==1.15.1
 requests==2.32.5
+rsa==4.9.1
 s3transfer==0.13.1
 scikit-learn==1.7.1
 scipy==1.16.1
 seaborn==0.13.2
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 stack-data==0.6.3
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 twelvelabs==1.0.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 wcwidth==0.2.13
+websockets==15.0.1
 Werkzeug==3.1.3
+wrapt==1.17.3
