added docker file

--- a/backend/tier-tok/src/main/resources/application.properties
+++ b/backend/tier-tok/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=tier-tok
-spring.docker.compose.enabled=true
-ai.server.base.url=http://localhost:5000
+spring.docker.compose.enabled=false
+ai.server.base.url=https://tiertok-ai-server.onrender.com
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tierTok-db
+# local
+#spring.datasource.url=jdbc:postgresql://localhost:5432/tierTok-db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class=org.postgresql.Driver
+
+# aws rds
+spring.datasource.url=jdbc:postgresql://tiertok-db.chyiwyiou10q.ap-southeast-1.rds.amazonaws.com:5432/tierTok-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class=org.postgresql.Driver
